syntax = "proto3";

package auth;
option go_package = "safe/auth/gen;authpb";

message LoginRequest {
  // 用户名
  string username = 1;
  string password = 2;
//  string id = 3;
//  string code = 4;
}

message LoginResponse {
  string token = 1;
  int32 token_expire = 2;
}

message CaptchaGetRequest {

}
message CaptchaGetResponse {
  string id = 1;
  string b64 = 2;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  // 获取验证码
//  rpc CaptchaGet(CaptchaGetRequest) returns (CaptchaGetResponse);
}
